--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
     <div class="header">
       <ul class="nav nav-pills pull-right">
         <li><%= link_to 'Users', users_path %></li>
+        <% if user_signed_in?%>
+          <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
+        <% else %>
+          <li><%= link_to 'Sign In', new_user_session_path %></li>
+        <% end %>
       </ul>
       <h3 class="text-muted">Quitter (Week 9 Lab)</h3>
     </div>
