--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,9 @@
       </ul>
       <h3 class="text-muted">Quitter (Week 9 Lab)</h3>
     </div>
-
+    <% flash.each do |key, msg| %>
+      <%= content_tag(:div, msg, class: "alert alert-#{key}") %>
+    <% end %>
     <%= yield %>
   </div>
 </body>
